adapt cross origin annotation