@@ -36,7 +36,20 @@ import java.util.stream.Collectors;
 @RestController
 @RequiredArgsConstructor
 @RequestMapping("/api/gateway")
-@CrossOrigin(origins = "*")
+@CrossOrigin(
+    origins = "*",
+    allowedHeaders = "*",
+    allowCredentials = "*",
+    methods = {
+        RequestMethod.GET,
+        RequestMethod.POST,
+        RequestMethod.PUT,
+        RequestMethod.DELETE,
+        RequestMethod.OPTIONS,
+        RequestMethod.HEAD,
+        RequestMethod.PATCH,
+        RequestMethod.TRACE
+    })
 public class ApiGatewayController {
 
     private final CustomersServiceClient customersServiceClient;
@@ -73,7 +86,7 @@ public class ApiGatewayController {
                 .forEach(pet -> pet.getVisits()
                     .addAll(visits.getItems().stream()
                         .filter(v -> v.getPetId() == pet.getId())
-                        .collect(Collectors.toList()))
+                        .toList())
                 );
             return owner;
         };
